<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorCode22"
    android:gravity="center"
    android:orientation="horizontal"
    android:paddingTop="40dp"
    android:paddingBottom="6dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/usersatoshi"
        android:elevation="28dp"
        android:padding="16dp"
        app:civ_border_width="4dp"
        app:civ_border_color="#5914C4"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="12dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:text="@string/nav_header_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_header_subtitle"
            android:textColor="@color/colorWhite" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_header_subtitle_2"
            android:textColor="@color/colorWhite"
            android:textStyle="italic" />
    </LinearLayout>
</LinearLayout>
