<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="50dp"
    android:layout_below="@id/titleCategory">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp"
            app:cardBackgroundColor="@color/colorCode4">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:padding="5dp"
                        android:layout_marginTop="2dp"
                        android:src="@drawable/menu_ic_home" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/colorWhite"
                        android:text="@string/menuhome"
                        android:textSize="16dp"
                        android:layout_marginBottom="8dp"
                        android:layout_height="20dp"
                        android:gravity="center" />
                </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp"
            app:cardBackgroundColor="@color/colorCode4">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:padding="5dp"
                        android:layout_marginTop="2dp"
                        android:src="@drawable/menu_ic_map" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/colorWhite"
                        android:text="@string/menumap"
                        android:gravity="center"
                        android:textSize="16dp"
                        android:layout_marginBottom="8dp"
                        android:layout_height="20dp"/>
                </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp"
            app:cardBackgroundColor="@color/colorCode4">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:padding="5dp"
                        android:layout_marginTop="2dp"
                        android:src="@drawable/menu_ic_share" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/colorWhite"
                        android:text="@string/menuabout"
                        android:gravity="center"
                        android:textSize="16dp"
                        android:layout_marginBottom="8dp"
                        android:layout_height="20dp"/>
                </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp"
            app:cardBackgroundColor="@color/colorCode4">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:padding="5dp"
                        android:layout_marginTop="2dp"
                        android:src="@drawable/menu_ic_pok" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/colorWhite"
                        android:text="@string/menupok"
                        android:gravity="center"
                        android:textSize="16dp"
                        android:layout_marginBottom="8dp"
                        android:layout_height="20dp"/>
                </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp"
            app:cardBackgroundColor="@color/colorCode4">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:padding="5dp"
                        android:layout_marginTop="2dp"
                        android:src="@drawable/menu_ic_photo" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/colorWhite"
                        android:text="Gallery"
                        android:gravity="center"
                        android:textSize="16dp"
                        android:layout_marginBottom="8dp"
                        android:layout_height="20dp"/>
                </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp"
            app:cardBackgroundColor="@color/colorCode4">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:padding="5dp"
                        android:layout_marginTop="2dp"
                        android:src="@drawable/menu_ic_login" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/colorWhite"
                        android:text="@string/menulog"
                        android:gravity="center"
                        android:textSize="16dp"
                        android:layout_marginBottom="8dp"
                        android:layout_height="20dp"/>
                </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</LinearLayout>